<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">munimji</string>
    <string name="hello_world">The total is: 0</string>
    <string name="Button1">Given</string><string name="menu_settings">Settings</string>
    <string name="Button2">Taken</string>
    <string name="name">Name : </string>
    <string name="name2">			Buddy\'s name</string>
    <string name="amount">Amount: </string>
    <string name="amount2">       	Amount       </string>
    <string name="AddBuddy">Add Buddy</string>
    <string name="Info">Check ur balance</string>
    <string name="Buttonmainpage">Add buddy</string>
    <string name="Update">Update Entry</string>
    <string name="bDel">Delete Buddy Name</string>
    <string name="Del">Delete Entry</string>

</resources>