<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/intentfinal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" >

        </TextView>

        <EditText
            android:id="@+id/etNameAdder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_weight="11.00"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/name2" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/etAmtEnter"
            android:layout_marginLeft="10dp"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/amount3">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <Button
            android:id="@+id/bAdd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/given"
            android:text="@string/Button1" />

        <Button
            android:id="@+id/bSub"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_weight="50"
            android:drawableLeft="@drawable/taken"
            android:text="@string/Button2" />
    </LinearLayout>

</LinearLayout>