<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/intentfinal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" >
        </TextView>

        <AutoCompleteTextView
            android:id="@+id/etNameDelete"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name2"
            android:padding="2dp"
            android:paddingLeft="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/bDel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:text="@string/bDel"
            android:drawableLeft="@drawable/delete"/>
        
    </LinearLayout>

</LinearLayout>