<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgcolor" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/AddId"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="100"
                android:drawableLeft="@drawable/add1"
                android:text="@string/Buttonmainpage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/Update_Entry"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="100"
                android:drawableLeft="@drawable/edit"
                android:text="@string/Update" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/infoAmt"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="100"
                android:drawableLeft="@drawable/info"
                android:text="@string/Info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/bDelEntry"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="100"
                android:drawableLeft="@drawable/delete"
                android:text="@string/Del" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/bFeedBack"
                android:layout_width="0dip"
                android:layout_height="70dp"
                android:layout_weight="7.61"
                android:background="@drawable/feedback" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>